Fixed css targetting wrong element and set element to rehide on every submit, before it would be set back to visible if another error throws.

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -21,10 +21,6 @@
     border-style: none;
 }
 
-.new-tweet form input.hidden {
-    visibility: hidden;
-}
-
 .new-tweet form .counter {
     float: right;
     font-family: 'Bungee', sans-serif;
@@ -37,4 +33,8 @@
 .new-tweet form label {
     margin-left: 10px;
     color: red;
+}
+
+.new-tweet form label.hidden {
+    visibility: hidden;
 }
